# jablotron-rs485

./: README.md  hacs.json  pyproject.toml
.github/workflows/: create_release.yml
custom_components/jablotron_rs485/: __init__.py  api.py  config_flow.py  const.py  manifest.json  strings.json  switch.py
custom_components/jablotron_rs485/translations/: en.json
